# GB_Emulator_PC

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/audio/: audiostream.h
src/interface/: interfaceadapter.cpp  interfaceadapter.h
src/program/: program.cpp  program.h
